Updated Late Fusion Model 8 variables on summary data

--- a/notebooks/Regression_Problem_Using_word2vec_for_Late_Fusion_and_Pytorch.ipynb
+++ b/notebooks/Regression_Problem_Using_word2vec_for_Late_Fusion_and_Pytorch.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnltk\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtokenize\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m word_tokenize\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -29,27 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                               title  score\n",
-      "0                                       Y Combinator     57\n",
-      "1                      A Student's Guide to Startups     16\n",
-      "2             Woz Interview: the early days of Apple      7\n",
-      "3                              NYC Developer Dilemma      5\n",
-      "4  Google, YouTube acquisition announcement could...      7\n",
-      "5  Business Intelligence the Inkling Way: cool pr...      4\n",
-      "6                         Sevin Rosen Unfunds - why?      5\n",
-      "7                         LikeBetter featured by BBC     10\n",
-      "8           weekendr: social network for the weekend      4\n",
-      "9            PhotoShow: Broadcast Photos to Cable TV      3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inspect the data\n",
     "print(data.head(10))"
@@ -77,103 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><div id=203788cc-9eb7-417e-8583-7128e6d90602 style=\"display:none; background-color:#9D6CFF; color:white; width:200px; height:30px; padding-left:5px; border-radius:4px; flex-direction:row; justify-content:space-around; align-items:center;\" onmouseover=\"this.style.backgroundColor='#BA9BF8'\" onmouseout=\"this.style.backgroundColor='#9D6CFF'\" onclick=\"window.commands?.execute('create-mitosheet-from-dataframe-output');\">See Full Dataframe in Mito</div> <script> if (window.commands.hasCommand('create-mitosheet-from-dataframe-output')) document.getElementById('203788cc-9eb7-417e-8583-7128e6d90602').style.display = 'flex' </script> <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Y Combinator</td>\n",
-       "      <td>57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A Student's Guide to Startups</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Woz Interview: the early days of Apple</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NYC Developer Dilemma</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Google, YouTube acquisition announcement could come tonight</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Business Intelligence the Inkling Way: cool prediction markets software</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Sevin Rosen Unfunds - why?</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>LikeBetter featured by BBC</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>weekendr: social network for the weekend</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>PhotoShow: Broadcast Photos to Cable TV</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table></div>"
-      ],
-      "text/plain": [
-       "                                               title  score\n",
-       "0                                       Y Combinator     57\n",
-       "1                      A Student's Guide to Startups     16\n",
-       "2             Woz Interview: the early days of Apple      7\n",
-       "3                              NYC Developer Dilemma      5\n",
-       "4  Google, YouTube acquisition announcement could...      7\n",
-       "5  Business Intelligence the Inkling Way: cool pr...      4\n",
-       "6                         Sevin Rosen Unfunds - why?      5\n",
-       "7                         LikeBetter featured by BBC     10\n",
-       "8           weekendr: social network for the weekend      4\n",
-       "9            PhotoShow: Broadcast Photos to Cable TV      3"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.head(10)"
+   ]
   },
   {
    "cell_type": "code",
@@ -208,17 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocabulary size: 10934\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Vocabulary size\n",
     "vocab_size = len(vocab)\n",
@@ -255,17 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total skip-gram pairs: 250232\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create pairs\n",
     "window_size = 2\n",
@@ -372,26 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1, Loss: 3790.7425\n",
-      "Epoch 2, Loss: 73.7711\n",
-      "Epoch 3, Loss: 1.5394\n",
-      "Epoch 4, Loss: 0.3664\n",
-      "Epoch 5, Loss: 0.1537\n",
-      "Epoch 6, Loss: 0.0635\n",
-      "Epoch 7, Loss: 0.0253\n",
-      "Epoch 8, Loss: 0.0099\n",
-      "Epoch 9, Loss: 0.0039\n",
-      "Epoch 10, Loss: 0.0015\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Training loop\n",
     "for epoch in range(10):\n",
@@ -506,18 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE: 50.68267415569801\n",
-      "R²: -0.09938579139549253\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
@@ -535,35 +396,203 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Enhanced numerical features\n",
+    "print(\"Generating numerical features...\")\n",
+    "data['length'] = data['title'].str.len()\n",
+    "data['word_count'] = data['title'].str.split().str.len()\n",
+    "data['avg_word_length'] = data['title'].apply(lambda x: np.mean([len(word) for word in x.split()]) if len(x.split()) > 0 else 0)\n",
+    "data['contains_number'] = data['title'].str.contains('\\d').astype(int)\n",
+    "data['starts_with_number'] = data['title'].str.match('^\\d').astype(int)\n",
+    "data['capital_letters'] = data['title'].apply(lambda x: sum(1 for c in x if c.isupper()))\n",
+    "data['word_density'] = data['length'] / (data['word_count'] + 1)\n",
+    "data['punctuation_count'] = data['title'].str.count('[^\\w\\s]')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Combine embeddings with numerical features\n",
+    "X_text = np.vstack(data['embedding'].values)\n",
+    "X_numeric = data[[\n",
+    "    'length',\n",
+    "    'word_count',\n",
+    "    'avg_word_length',\n",
+    "    'contains_number',\n",
+    "    'starts_with_number',\n",
+    "    'capital_letters',\n",
+    "    'word_density',\n",
+    "    'punctuation_count'\n",
+    "]].values"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Late fusion\n",
+    "X = np.hstack([X_text, X_numeric])\n",
+    "y = data['score'].values\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train-Test Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Train Random Forest Model\n",
+    "print(\"Training Random Forest model...\")\n",
+    "regressor = RandomForestRegressor(random_state=42)\n",
+    "regressor.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict and evaluate\n",
+    "y_pred = regressor.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\nModel Performance:\")\n",
+    "print(f\"Mean Squared Error: {mse:.4f}\")\n",
+    "print(f\"R² Score: {r2:.4f}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Feature importance analysis\n",
+    "feature_names = [f'embedding_{i}' for i in range(embedding_dim)] + [\n",
+    "    'length',\n",
+    "    'word_count',\n",
+    "    'avg_word_length',\n",
+    "    'contains_number',\n",
+    "    'starts_with_number',\n",
+    "    'capital_letters',\n",
+    "    'word_density',\n",
+    "    'punctuation_count'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get feature importances\n",
+    "importances = regressor.feature_importances_\n",
+    "numeric_feature_importances = importances[embedding_dim:]\n",
+    "numeric_feature_names = feature_names[embedding_dim:]\n",
+    "\n",
+    "# Print importance of numerical features\n",
+    "print(\"\\nNumerical Feature Importances:\")\n",
+    "for name, importance in zip(numeric_feature_names, numeric_feature_importances):\n",
+    "    print(f\"{name}: {importance:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model Evaluation\n",
+    "print(\"\\n=== Model Performance Evaluation ===\")\n",
+    "\n",
+    "# Basic Metrics\n",
+    "y_pred = regressor.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mae = np.mean(np.abs(y_test - y_pred))\n",
+    "\n",
+    "print(f\"\\nPerformance Metrics:\")\n",
+    "print(f\"Mean Squared Error (MSE): {mse:.4f}\")\n",
+    "print(f\"Root Mean Squared Error (RMSE): {rmse:.4f}\")\n",
+    "print(f\"Mean Absolute Error (MAE): {mae:.4f}\")\n",
+    "print(f\"R² Score: {r2:.4f}\")\n",
+    "\n",
+    "# Feature Importance Analysis\n",
+    "print(\"\\nFeature Importance Analysis:\")\n",
+    "print(\"\\nTop 10 Most Important Features:\")\n",
+    "feature_importance = list(zip(feature_names, regressor.feature_importances_))\n",
+    "feature_importance.sort(key=lambda x: x[1], reverse=True)\n",
+    "for name, importance in feature_importance[:10]:\n",
+    "    print(f\"{name}: {importance:.4f}\")\n",
+    "\n",
+    "# Numerical Features Summary\n",
+    "print(\"\\nNumerical Features Summary:\")\n",
+    "numeric_features = [\n",
+    "    'length', 'word_count', 'avg_word_length', 'contains_number',\n",
+    "    'starts_with_number', 'capital_letters', 'word_density', 'punctuation_count'\n",
+    "]\n",
+    "print(\"\\nFeature Statistics:\")\n",
+    "print(data[numeric_features].describe())\n",
+    "\n",
+    "# Correlation with Target\n",
+    "print(\"\\nCorrelation with Target (score):\")\n",
+    "correlations = data[numeric_features + ['score']].corr()['score'].sort_values(ascending=False)\n",
+    "print(correlations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Testing if code is running...\")\n",
+    "print(\"Current shape of data:\", data.shape)\n",
+    "print(\"Available columns:\", data.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing if notebook is running...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Testing if notebook is running...\")"
+   ]
   }
  ],
  "metadata": {
@@ -582,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
