Pytorch implementation, model with simplified outputs

--- a/notebooks/word2vec simplified input.ipynb
+++ b/notebooks/word2vec simplified input.ipynb
@@ -103,23 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3989, 1000)"
+       "(71, 10)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "words = []\n",
-    "num_lines = 1000\n",
+    "num_lines = 10\n",
     "lines = df.title.tolist()[:num_lines]\n",
     "\n",
     "for i in df.title[:num_lines]:\n",
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
     "loss_fn = nn.BCEWithLogitsLoss()\n",
     "\n",
     "# Setup optimizer to optimize model's parameters\n",
-    "optimiser = torch.optim.SGD(params= word2vec.parameters(), lr = 0.2)"
+    "optimiser = torch.optim.SGD(params= word2vec.parameters(), lr = 0.5)"
    ]
   },
   {
@@ -300,73 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X dtype: torch.int64\n",
-      "X max: 3988, vocab size: 3989\n",
-      "X min: 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"X dtype: {X.dtype}\")\n",
-    "\n",
-    "\n",
-    "print(f\"X max: {X.max()}, vocab size: {word2vec.emb.num_embeddings}\")\n",
-    "print(f\"X min: {X.min()}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 1.3880, -0.4897, -0.3372,  ..., -0.2088, -0.3954, -0.7714],\n",
-       "        [ 0.1116,  0.1261, -0.4128,  ...,  0.5296,  0.2300,  0.7159],\n",
-       "        [-0.8151,  1.0350, -0.9828,  ..., -0.0524, -0.0085,  1.1469],\n",
-       "        ...,\n",
-       "        [-0.5606,  0.5857, -0.8614,  ..., -0.0681, -0.1868, -0.1501],\n",
-       "        [-1.3996,  0.1783,  0.5718,  ..., -0.2068, -0.5095,  0.2986],\n",
-       "        [-0.3774,  1.3890, -0.5896,  ...,  0.0078, -0.0183,  0.5419]],\n",
-       "       grad_fn=<AddmmBackward0>)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "word2vec(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0 | Loss: 0.73396, Accuracy: 50.08%\n",
-      "Epoch: 100 | Loss: 0.73252, Accuracy: 50.26%\n",
-      "Epoch: 200 | Loss: 0.73109, Accuracy: 50.44%\n",
-      "Epoch: 300 | Loss: 0.72966, Accuracy: 50.62%\n",
-      "Epoch: 400 | Loss: 0.72823, Accuracy: 50.81%\n",
-      "Epoch: 500 | Loss: 0.72681, Accuracy: 50.98%\n",
-      "Epoch: 600 | Loss: 0.72540, Accuracy: 51.17%\n",
-      "Epoch: 700 | Loss: 0.72399, Accuracy: 51.35%\n",
-      "Epoch: 800 | Loss: 0.72258, Accuracy: 51.53%\n",
-      "Epoch: 900 | Loss: 0.72118, Accuracy: 51.71%\n"
+      "Epoch: 0 | Loss: 0.71978, Accuracy: 51.90%\n",
+      "Epoch: 100 | Loss: 0.71629, Accuracy: 52.36%\n",
+      "Epoch: 200 | Loss: 0.71284, Accuracy: 52.83%\n",
+      "Epoch: 300 | Loss: 0.70941, Accuracy: 53.30%\n",
+      "Epoch: 400 | Loss: 0.70600, Accuracy: 53.76%\n",
+      "Epoch: 500 | Loss: 0.70261, Accuracy: 54.23%\n",
+      "Epoch: 600 | Loss: 0.69924, Accuracy: 54.69%\n",
+      "Epoch: 700 | Loss: 0.69590, Accuracy: 55.17%\n",
+      "Epoch: 800 | Loss: 0.69258, Accuracy: 55.64%\n",
+      "Epoch: 900 | Loss: 0.68928, Accuracy: 56.12%\n"
      ]
     }
    ],
@@ -471,7 +421,7 @@
     }
    ],
    "source": [
-    "plt.plot(torch.tensor(lossi).view(-1, 1000).mean(1))"
+    "# plt.plot(torch.tensor(lossi).view(-1, 1000).mean(1))"
    ]
   },
   {
