Entire tokenization & word2vec pipeline working

--- a/notebooks/word2vec simplified input.ipynb
+++ b/notebooks/word2vec simplified input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from typing import Union, List\n",
     "import nltk\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "from collections import Counter\n",
     "\n",
     "# Setup device agnostic code\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -46,17 +47,21 @@
       "[nltk_data] Downloading package punkt_tab to\n",
       "[nltk_data]     /Users/daniellevy/nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-      "[nltk_data] Error loading tokenizers/punkt: Package 'tokenizers/punkt'\n",
-      "[nltk_data]     not found in index\n"
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/daniellevy/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     /Users/daniellevy/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +70,8 @@
     "# Download all necessary NLTK data\n",
     "nltk.download('punkt')\n",
     "nltk.download('punkt_tab')\n",
-    "nltk.download('tokenizers/punkt')"
+    "nltk.download('wordnet')\n",
+    "nltk.download('omw-1.4')"
    ]
   },
   {
@@ -192,121 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess(text: str) -> list[str]:\n",
-    "  text = text.lower()\n",
-    "  text = text.replace('.',  ' <PERIOD> ')\n",
-    "  text = text.replace(',',  ' <COMMA> ')\n",
-    "  text = text.replace('\"',  ' <QUOTATION_MARK> ')\n",
-    "  text = text.replace(';',  ' <SEMICOLON> ')\n",
-    "  text = text.replace('!',  ' <EXCLAMATION_MARK> ')\n",
-    "  text = text.replace('?',  ' <QUESTION_MARK> ')\n",
-    "  text = text.replace('(',  ' <LEFT_PAREN> ')\n",
-    "  text = text.replace(')',  ' <RIGHT_PAREN> ')\n",
-    "  text = text.replace('--', ' <HYPHENS> ')\n",
-    "  text = text.replace('?',  ' <QUESTION_MARK> ')\n",
-    "  text = text.replace(':',  ' <COLON> ')\n",
-    "  words = text.split()\n",
-    "  stats = collections.Counter(words)\n",
-    "  words = [word for word in words if stats[word] > 5]\n",
-    "  return words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess_text(text_input: Union[str, List[str]], min_freq: int = 5) -> tuple[List[str], dict]:\n",
-    "    \"\"\"\n",
-    "    Preprocess text input and create vocabulary.\n",
-    "    \n",
-    "    Args:\n",
-    "        text_input: Either a single string or list of strings\n",
-    "        min_freq: Minimum frequency for a word to be included in vocabulary\n",
-    "    \n",
-    "    Returns:\n",
-    "        processed_words: List of processed words\n",
-    "        word_to_idx: Dictionary mapping words to indices\n",
-    "    \"\"\"\n",
-    "    # Download required NLTK data if not already present\n",
-    "    try:\n",
-    "        nltk.data.find('tokenizers/punkt')\n",
-    "    except LookupError:\n",
-    "        nltk.download('punkt')\n",
-    "    \n",
-    "    # Convert input to list of sentences\n",
-    "    if isinstance(text_input, str):\n",
-    "        sentences = sent_tokenize(text_input)\n",
-    "    elif isinstance(text_input, list):\n",
-    "        # Handle each line which might contain multiple sentences\n",
-    "        sentences = []\n",
-    "        for line in text_input:\n",
-    "            if isinstance(line, str):\n",
-    "                sentences.extend(sent_tokenize(line))\n",
-    "    else:\n",
-    "        raise ValueError(\"Input must be either a string or list of strings\")\n",
-    "\n",
-    "    # Text cleaning function\n",
-    "    def clean_text(text: str) -> str:\n",
-    "        # Convert to lowercase\n",
-    "        text = text.lower()\n",
-    "        \n",
-    "        # Replace special characters with tokens\n",
-    "        replacements = {\n",
-    "            '.': ' <PERIOD> ',\n",
-    "            ',': ' <COMMA> ',\n",
-    "            '\"': ' <QUOTATION_MARK> ',\n",
-    "            ';': ' <SEMICOLON> ',\n",
-    "            '!': ' <EXCLAMATION_MARK> ',\n",
-    "            '?': ' <QUESTION_MARK> ',\n",
-    "            '(': ' <LEFT_PAREN> ',\n",
-    "            ')': ' <RIGHT_PAREN> ',\n",
-    "            '--': ' <HYPHENS> ',\n",
-    "            ':': ' <COLON> ',\n",
-    "            \"'\": ' <APOSTROPHE> ',\n",
-    "            '\\n': ' ',\n",
-    "            '\\t': ' '\n",
-    "        }\n",
-    "        \n",
-    "        for old, new in replacements.items():\n",
-    "            text = text.replace(old, new)\n",
-    "        \n",
-    "        # Remove special characters and extra whitespace\n",
-    "        text = re.sub(r'[^a-zA-Z0-9\\s<>_]', '', text)\n",
-    "        text = re.sub(r'\\s+', ' ', text)\n",
-    "        \n",
-    "        return text.strip()\n",
-    "\n",
-    "    # Process all sentences\n",
-    "    processed_words = []\n",
-    "    for sentence in sentences:\n",
-    "        # Clean the text\n",
-    "        cleaned_text = clean_text(sentence)\n",
-    "        # Tokenize\n",
-    "        words = word_tokenize(cleaned_text)\n",
-    "        processed_words.extend(words)\n",
-    "\n",
-    "    # Count word frequencies\n",
-    "    word_counts = Counter(processed_words)\n",
-    "    \n",
-    "    # Create vocabulary (only including words that meet minimum frequency)\n",
-    "    vocab = [word for word, count in word_counts.items() if count >= min_freq]\n",
-    "    word_to_idx = {word: idx for idx, word in enumerate(vocab)}\n",
-    "    \n",
-    "    # Filter words based on vocabulary\n",
-    "    processed_words = [word for word in processed_words if word in word_to_idx]\n",
-    "    \n",
-    "    return processed_words, word_to_idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,6 +206,10 @@
     "    \"\"\"\n",
     "    Preprocess text input and create vocabulary.\n",
     "    \"\"\"\n",
+    "\n",
+    "    # Initialise Lemmatizer\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "\n",
     "    # Define special tokens using a marker that word_tokenize won't split\n",
     "    SPECIAL_TOKENS = {\n",
     "        '.': 'XPERIODX',\n",
@@ -382,6 +278,10 @@
     "            words = word_tokenize(cleaned_text)\n",
     "            # Restore angle bracket format\n",
     "            words = [RESTORE_TOKENS.get(word, word) for word in words]\n",
+    "            # Apply lemmatization only to non-special tokens\n",
+    "            words = [word if word in RESTORE_TOKENS.values() \n",
+    "                    else lemmatizer.lemmatize(word) \n",
+    "                    for word in words]\n",
     "        except:\n",
     "            words = cleaned_text.split()\n",
     "        processed_words.extend(words)\n",
@@ -401,112 +301,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['nasa',\n",
-       " '<APOSTROPHE>',\n",
-       " 's',\n",
-       " 'rocket',\n",
-       " 'engine',\n",
-       " 'test',\n",
-       " 'a',\n",
-       " 'success',\n",
-       " 'heat',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'are',\n",
-       " 'becoming',\n",
-       " 'the',\n",
-       " 'technology',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'future',\n",
-       " 'why',\n",
-       " 'you',\n",
-       " 'should',\n",
-       " 'develop',\n",
-       " 'web',\n",
-       " 'apps',\n",
-       " 'tool',\n",
-       " 'to',\n",
-       " 'make',\n",
-       " 'twitter',\n",
-       " 'archive',\n",
-       " 'fedora']"
+       "2063"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Process text inputs, receive tokens and word to index dictionary\n",
     "processed_words, word_to_idx = preprocess_text(lines, min_freq=5)\n",
-    "processed_words[:30]"
+    "len(processed_words)\n",
+    "len(word_to_idx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_skipgram_pairs(input_lines, word_to_ix, context_len=3):\n",
+    "def create_skipgram_pairs(processed_words: List[str], \n",
+    "                         word_to_idx: dict, \n",
+    "                         context_len: int = 3) -> tuple[List[int], List[List[int]]]:\n",
     "    \"\"\"\n",
-    "    Create skipgram pairs from lines of text.\n",
-    "    Returns: tuple of (input_indices, context_indices)\n",
+    "    Create skipgram pairs from a list of processed words.\n",
     "    \"\"\"\n",
-    "    context_words = []\n",
-    "    input_words = []\n",
-    "    middle_index = context_len // 2\n",
-    "\n",
-    "    for line in input_lines:\n",
-    "        words = line.strip().split()\n",
+    "    if context_len % 2 == 0:\n",
+    "        raise ValueError(\"context_len should be an odd number\")\n",
     "        \n",
-    "        if len(words) >= context_len:\n",
-    "            windows = list(more_itertools.windowed(words, context_len))\n",
-    "            \n",
-    "            for window in windows:\n",
-    "                center = window[middle_index]\n",
-    "                context = [window[0], window[2]]\n",
-    "                \n",
-    "                input_words.append(center)\n",
-    "                context_words.append(context)\n",
-    "\n",
-    "    # Convert to indices\n",
-    "    input_indices = [word_to_ix[word] for word in input_words]\n",
-    "    context_indices = [[word_to_ix[w] for w in context] for context in context_words]\n",
+    "    window_radius = context_len // 2\n",
+    "    input_indices = []\n",
+    "    context_indices = []\n",
     "    \n",
-    "    return input_indices, context_indices\n",
-    "\n"
+    "    # Use sliding window to create pairs\n",
+    "    windows = list(more_itertools.windowed(processed_words, context_len))\n",
+    "    \n",
+    "    for window in windows:\n",
+    "        if None in window:  # Skip incomplete windows\n",
+    "            continue\n",
+    "            \n",
+    "        # Get center word and context\n",
+    "        center_word = window[window_radius]\n",
+    "        context = list(window[:window_radius]) + list(window[window_radius + 1:])\n",
+    "        \n",
+    "        # Only add if all words are in vocabulary\n",
+    "        if center_word in word_to_idx and all(w in word_to_idx for w in context):\n",
+    "            input_indices.append(word_to_idx[center_word])\n",
+    "            context_indices.append([word_to_idx[w] for w in context])\n",
+    "    \n",
+    "    return input_indices, context_indices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size: 2063\n",
+      "Original text vocabulary size: 17110\n",
+      "Dataset size: 54762\n",
+      "Sample from vocabulary: ['nasa', '<APOSTROPHE>', 's', 'rocket', 'engine', 'test', 'a', 'success', 'heat', 'pump']\n",
+      "Sample from processed words: ['nasa', '<APOSTROPHE>', 's', 'rocket', 'engine', 'test', 'a', 'success', 'heat', 'pump']\n",
+      "X shape:  torch.Size([54762]) ; Y shape:  torch.Size([54762, 2]) ; Shapes compatible:  True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usage:\n",
+    "# Set context length\n",
     "context_len = 3\n",
-    "input_indices, context_indices = create_skipgram_pairs(lines, stoi, context_len)\n",
+    "# Create Skip-gram dataset using processed, tokenized text input:\n",
+    "input_indices, context_indices = create_skipgram_pairs(processed_words, word_to_idx, context_len)\n",
+    "\n",
+    "# Convert dataset indices to tensors\n",
     "X = torch.tensor(input_indices, dtype=torch.long)\n",
-    "Y = torch.tensor(context_indices, dtype=torch.long)"
+    "Y = torch.tensor(context_indices, dtype=torch.long)\n",
+    "\n",
+    "# Debug prints\n",
+    "print(\"Vocabulary size:\", len(word_to_idx))\n",
+    "print(\"Original text vocabulary size:\", len(words))\n",
+    "print(\"Dataset size:\", len(input_indices))\n",
+    "print(\"Sample from vocabulary:\", list(word_to_idx.keys())[:10])\n",
+    "print(\"Sample from processed words:\", processed_words[:10])\n",
+    "print(\"X shape: \", X.shape, \"; Y shape: \", Y.shape, \"; Shapes compatible: \", X.shape[0] == Y.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([ 1,  2,  3,  4,  5,  6,  7, 10, 11, 12]),\n",
+       "(tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10]),\n",
        " tensor([[ 0,  2],\n",
        "         [ 1,  3],\n",
        "         [ 2,  4],\n",
@@ -514,31 +413,31 @@
        "         [ 4,  6],\n",
        "         [ 5,  7],\n",
        "         [ 6,  8],\n",
-       "         [ 9, 11],\n",
-       "         [10, 12],\n",
-       "         [11, 13]]))"
+       "         [ 7,  9],\n",
+       "         [ 8, 10],\n",
+       "         [ 9, 11]]))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X.shape, Y.shape\n",
+    "# Samples of tensors\n",
     "X[:10], Y[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset size: 48259 ; context length: 3 ; vocab size: 17110\n"
+      "Dataset size: 54762 ; context length: 3 ; vocab size: 17110\n"
      ]
     }
    ],
@@ -896,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -904,14 +803,14 @@
      "output_type": "stream",
      "text": [
       "Random sample of words:\n",
-      "['values?', 'coumarin', 'bloomfield', 'logs', 'abroad', 'better', 'pakistan', 'rapid', 'literal', 'bingo']\n"
+      "['black', 'method', 'graph', '<PERIOD>', 'cheaper', 'and', 'of', 'death', 'won', '<PERIOD>']\n"
      ]
     }
    ],
    "source": [
     "# Using random\n",
     "# Make a copy so you don't shuffle the original list\n",
-    "words_sample = words.copy()\n",
+    "words_sample = processed_words.copy()\n",
     "random.shuffle(words_sample)\n",
     "\n",
     "# Print first 10 shuffled words\n",
