refactor: rename csv to hn_score_title_10k

--- a/notebooks/word2vec v2.ipynb
+++ b/notebooks/word2vec v2.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../HN Score, Title 10k.csv')\n",
+    "df = pd.read_csv('../hn_score_title_10k.csv')\n",
     "df.title = df.title.str.lower()\n",
     "df.dropna(inplace= True)\n",
     "df.head()"
