--- a/notebooks/word2vec simplified input.ipynb
+++ b/notebooks/word2vec simplified input.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../HN Score, Title 10k.csv')\n",
+    "df = pd.read_csv('../hn_score_title_10k.csv')\n",
     "df.title = df.title.str.lower()\n",
     "df.dropna(inplace= True) # Remove rows with incomplete data\n",
     "\n",
@@ -5407,6 +5407,26 @@
    ],
    "source": [
     "plot_loss(losses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66.71704729677415"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4451.1644**(1/2)"
    ]
   }
  ],
