data: weights and embeddings

--- a/Regression3.ipynb
+++ b/Regression3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import wikipediaapi\n",
     "import re\n",
     "from typing import List, Dict\n",
-    "import logging"
+    "import logging\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,6 +201,17 @@
     "        self.vocab['<UNK>'] = 0\n",
     "        \n",
     "        self.idx_to_word = {idx: word for word, idx in self.vocab.items()}\n",
+    "        # word_to_idx = {word: idx for word, idx in self.vocab.items()}\n",
+    "        # print('------------------------- got word to idx -------------------------')\n",
+    "\n",
+    "        # print(word_to_idx)\n",
+    "\n",
+    "        # with open('word_to_idx.json', 'w') as f:\n",
+    "        #     json.dump(word_to_idx, f)\n",
+    "\n",
+    "        # print('------------------------- saved to json -------------------------')\n",
+    "\n",
+    "\n",
     "        self.vocab_size = len(self.vocab)\n",
     "        \n",
     "        # Create training pairs\n",
@@ -334,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,35 +545,6 @@
     "        logger.info(f\"Epoch {epoch+1}/{num_epochs}, Loss: {avg_loss:.4f}\")\n",
     "    \n",
     "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "import torch\n",
-    "from typing import List\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "from data_collection import get_training_data\n",
-    "from word2vec_model import train_word2vec\n",
-    "from late_fusion_model import LateFusionModel, FeatureExtractor, train_late_fusion\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Hacker News Predictor package.\n",
-    "This package contains modules for predicting Hacker News article scores using a Late Fusion model.\n",
-    "\"\"\""
    ]
   },
   {
